--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sophia Kabaka — Portfolio</title>
   <meta name="description" content="Portfolio of Sophia Kabaka — Web Developer (PHP, MySQL) & Creative Maker.">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -27,7 +28,7 @@
   <style>
     @keyframes fade-up { to { opacity: 1; transform: translateY(0); } }
     .animate-fade-up { animation: fade-up .8s forwards; }
-    @keyframes pulse-slow { 0%, 100%{ opacity:1;} 50%{opacity:.6;} }
+    @keyframes pulse-slow { 0%, 100%{ opacity:1;} 50%{opacity:.9;} }
     .animate-pulse-slow { animation: pulse-slow 2s infinite; }
   </style>
 </head>
@@ -59,13 +60,9 @@
     </a>
 
     <nav class="space-x-4 text-sm">
-      <a href="#projects" class="hover:text-accent">Projects</a>
-      <a href="#about" class="hover:text-accent">About</a>
-      <a href="#contact" class="hover:text-accent">Contact</a>
-      <a href="https://github.com/sophiakabaka" target="_blank"
-         class="ml-2 px-3 py-1 rounded bg-accent text-white text-sm">
-        GitHub
-      </a>
+      <a href="#projects" class="bg-violet-100 hover:text-accent">Projects</a>
+      <a href="#about" class="bg-violet-100 hover:text-accent">About</a>
+      <a href="#contact" class="bg-violet-100 hover:text-accent">Contact</a>
     </nav>
   </div>
 </header>
@@ -86,70 +83,130 @@
 
 
     <div class="flex gap-4 opacity-0 translate-y-6 animate-fade-up delay-400">
-      <a href="#projects"
-         class="px-5 py-2 rounded-md bg-accent text-white hover:scale-105 transition-transform">
-        View Projects
-      </a>
-      <a href="#contact"
-         class="px-5 py-2 rounded-md border border-gray-300 hover:scale-105 transition-transform">
-        Get in touch
-      </a>
-    </div>
+  <a href="https://github.com/sophiakabaka" target="_blank"
+     class="px-5 py-2 rounded-md border border-gray-300 bg-violet-50 hover:bg-violet-100 transition-colors">
+    GitHub
+  </a>
+  <a href="#contact"
+     class="px-5 py-2 rounded-md border border-gray-300 bg-violet-50 hover:bg-violet-100 transition-colors">
+    Get in touch
+  </a>
+</div>
 
-    <p class="text-sm text-gray-600 opacity-0 translate-y-6 animate-fade-up delay-600">
-      <strong>Skills:</strong> PHP · MySQL · JavaScript · HTML/CSS · WordPress · Bootstrap · Tailwind · Git
-    </p>
-  </section>
+<p class="text-sm text-gray-600 opacity-0 translate-y-6 animate-fade-up delay-600 flex flex-wrap items-center gap-4">
+  <strong class="w-full">Skills:</strong>
 
-  <!-- PROJECTS -->
-  <section id="projects" class="mt-20">
-    <h2 class="text-2xl font-bold">Projects</h2>
+  <span class="flex items-center gap-1">
+    <i class="devicon-php-plain colored text-xl"></i> PHP
+  </span>
 
-    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
+  <span class="flex items-center gap-1">
+    <i class="devicon-mysql-plain colored text-xl"></i> MySQL
+  </span>
 
-      <!-- Project card -->
-      <article class="bg-white rounded-xl p-4 shadow-sm hover:shadow-lg hover:scale-105 transition-transform">
-        <img src="blog_project.png"
-             class="w-full h-40 object-cover rounded-md mb-3"
-             alt="Blog project screenshot"
-             onerror="this.src='https://via.placeholder.com/600x400.png?text=Screenshot'">
+  <span class="flex items-center gap-1">
+    <i class="devicon-javascript-plain colored text-xl"></i> JavaScript
+  </span>
 
-        <h3 class="font-semibold">Personal Blog & Back Office</h3>
-        <p class="text-sm text-gray-600 mt-1">
-          Full-stack blog built with PHP & MySQL. Includes authentication, CRUD, pagination, search.
-        </p>
-    <p class="text-xs text-gray-500 mt-1 italic">💡 I learned how to structure a full CRUD system and implement secure authentication.</p>
+  <span class="flex items-center gap-1">
+    <i class="devicon-html5-plain colored text-xl"></i> HTML
+  </span>
 
-        <div class="mt-3 flex gap-2">
-          <a href="https://github.com/sophiakabaka/Blog_project" target="_blank"
-             class="text-sm px-3 py-1 rounded border border-gray-200">
-            💻 Code
-          </a>
-          <a href="https://sophiakabaka.github.io/Blog_project/"
-             class="text-sm px-3 py-1 rounded bg-soft-pink">
-            🚀 Demo
-          </a>
-        </div>
-      </article>
-<!-- KWS Project --> 
- <article class="bg-white rounded-xl p-4 shadow-sm hover:shadow-lg hover:scale-105 transition-transform duration-300"> <img src="KWS_project.png" alt="screenshot" class="w-full h-40 object-cover rounded-md mb-3" onerror="this.src='https://via.placeholder.com/600x400.png?text=Screenshot'"/> 
-    <h3 class="font-semibold">Kenya Wildlife Service Project</h3> 
-    <p class="text-sm text-gray-600 mt-1"> Practice project inspired by The Kenya Wildlife Service. Tech used: HTML, CSS, Bootstrap, JavaScript. </p> 
-    <p class="text-xs text-gray-500 mt-1 italic">💡 This project taught me responsive layouts and how to integrate Bootstrap effectively.</p> 
-    <div class="mt-3 flex gap-2"> <a href="https://github.com/sophiakabaka/Kenya_Wildlife_Service_project" class="text-sm px-3 py-1 rounded border border-gray-200 flex items-center gap-1"> 💻 View code </a> <a href="https://sophiakabaka.github.io/Kenya_Wildlife_Service_project/" class="text-sm px-3 py-1 rounded bg-soft-pink flex items-center gap-1"> 🚀 Live demo </a> </div> </article> 
-    
-    <!-- Singa ya Famille Project -->
-      <article class="bg-white rounded-xl p-4 shadow-sm hover:shadow-lg hover:scale-105 transition-transform duration-300"> 
-        <img src="singa-ya-famille_project.png" alt="screenshot" class="w-full h-40 object-cover rounded-md mb-3" onerror="this.src='https://via.placeholder.com/600x400.png?text=Screenshot'"/> 
-        <h3 class="font-semibold">Singa ya Famille Website</h3> 
-        <p class="text-sm text-gray-600 mt-1"> Website for an association organizing artistic activities for orphans in DRC. Tech used: HTML, CSS, JS, PHP, Bootstrap. </p> 
-        <p class="text-xs text-gray-500 mt-1 italic">💡 I improved my PHP skills and learned how to structure content for social impact projects.</p> <div class="mt-3 flex gap-2"> 
-            <a href="https://github.com/sophiakabaka/singa_ya_famille" class="text-sm px-3 py-1 rounded border border-gray-200 flex items-center gap-1"> 💻 View code </a> <a href="https://sophiakabaka.github.io/singa_ya_famille/" class="text-sm px-3 py-1 rounded bg-soft-pink flex items-center gap-1"> 🚀 Live demo </a>
- </div> 
-</article> 
+  <span class="flex items-center gap-1">
+    <i class="devicon-css3-plain colored text-xl"></i> CSS
+  </span>
 
-    </div>
-  </section>
+  <span class="flex items-center gap-1">
+    <i class="devicon-wordpress-plain colored text-xl"></i> WordPress
+  </span>
+
+  <span class="flex items-center gap-1">
+    <i class="devicon-bootstrap-plain colored text-xl"></i> Bootstrap
+  </span>
+
+  <span class="flex items-center gap-1">
+    <i class="devicon-tailwindcss-original colored text-xl"></i> Tailwind
+  </span>
+
+  <span class="flex items-center gap-1">
+    <i class="devicon-git-plain colored text-xl"></i> Git
+  </span>
+</p>
+
+
+<!-- PROJECTS -->
+<section id="projects" class="mt-20">
+  <h2 class="text-2xl font-bold">Projects</h2>
+
+  <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
+
+    <!-- Personal Blog & Back Office -->
+    <a href="https://sophiakabaka.github.io/Blog_project/" target="_blank" class="block bg-white rounded-xl p-4 shadow-sm hover:shadow-lg hover:scale-105 transition-transform duration-300">
+      <img src="blog_project.png"
+           class="w-full h-40 object-cover rounded-md mb-3"
+           alt="Blog project screenshot"
+           onerror="this.src='https://via.placeholder.com/600x400.png?text=Screenshot'">
+
+      <h3 class="font-semibold">Personal Blog & Back Office</h3>
+      <p class="text-sm text-gray-600 mt-1">
+        Full-stack blog built with PHP & MySQL. Includes authentication, CRUD, pagination, search.
+      </p>
+      <p class="text-xs text-gray-500 mt-1 italic">
+        💡 I learned how to structure a full CRUD system and implement secure authentication.
+      </p>
+
+      <div class="mt-3 flex gap-2">
+        <span class="text-sm px-3 py-1 rounded border border-gray-200 bg-white">💻 Code</span>
+        <span class="text-sm px-3 py-1 rounded bg-soft-pink">🚀 Demo</span>
+      </div>
+    </a>
+
+    <!-- Kenya Wildlife Service Project -->
+    <a href="https://sophiakabaka.github.io/Kenya_Wildlife_Service_project/" target="_blank" class="block bg-white rounded-xl p-4 shadow-sm hover:shadow-lg hover:scale-105 transition-transform duration-300">
+      <img src="KWS_project.png"
+           class="w-full h-40 object-cover rounded-md mb-3"
+           alt="Kenya Wildlife Service screenshot"
+           onerror="this.src='https://via.placeholder.com/600x400.png?text=Screenshot'">
+
+      <h3 class="font-semibold">Kenya Wildlife Service Project</h3>
+      <p class="text-sm text-gray-600 mt-1">
+        Practice project inspired by The Kenya Wildlife Service. Tech used: HTML, CSS, Bootstrap, JavaScript.
+      </p>
+      <p class="text-xs text-gray-500 mt-1 italic">
+        💡 This project taught me responsive layouts and how to integrate Bootstrap effectively.
+      </p>
+
+      <div class="mt-3 flex gap-2">
+        <span class="text-sm px-3 py-1 rounded border border-gray-200 bg-white">💻 Code</span>
+        <span class="text-sm px-3 py-1 rounded bg-soft-pink">🚀 Demo</span>
+      </div>
+    </a>
+
+    <!-- Singa ya Famille Website -->
+    <a href="https://sophiakabaka.github.io/singa_ya_famille/" target="_blank" class="block bg-white rounded-xl p-4 shadow-sm hover:shadow-lg hover:scale-105 transition-transform duration-300">
+      <img src="singa-ya-famille_project.png"
+           class="w-full h-40 object-cover rounded-md mb-3"
+           alt="Singa ya Famille screenshot"
+           onerror="this.src='https://via.placeholder.com/600x400.png?text=Screenshot'">
+
+      <h3 class="font-semibold">Singa ya Famille Website</h3>
+      <p class="text-sm text-gray-600 mt-1">
+        Website for an association organizing artistic activities for orphans in DRC. Tech used: HTML, CSS, JS, PHP, Bootstrap.
+      </p>
+      <p class="text-xs text-gray-500 mt-1 italic">
+        💡 I improved my PHP skills and learned how to structure content for social impact projects.
+      </p>
+
+      <div class="mt-3 flex gap-2">
+        <span class="text-sm px-3 py-1 rounded border border-gray-200 bg-white">💻 Code</span>
+        <span class="text-sm px-3 py-1 rounded bg-soft-pink">🚀 Demo</span>
+      </div>
+    </a>
+
+  </div>
+</section>
+
+
 
   <!-- ABOUT -->
   <section id="about" class="mt-20">
