--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 
     <div class="flex gap-4 opacity-0 translate-y-6 animate-fade-up delay-400">
   <a href="https://github.com/sophiakabaka" target="_blank"
-     class="px-5 py-2 rounded-md border border-gray-300 bg-violet-50 hover:bg-violet-100 transition-colors">
+     class="px-5 py-2 rounded-md border border-gray-300 bg-accent hover:bg-violet-100 transition-colors">
     GitHub
   </a>
   <a href="#contact"
-     class="px-5 py-2 rounded-md border border-gray-300 bg-violet-50 hover:bg-violet-100 transition-colors">
+     class="px-5 py-2 rounded bg-accent rounded-md border border-gray-300 hover:bg-violet-100 transition-colors">
     Get in touch
   </a>
 </div>
