--- a/index.html
+++ b/index.html
@@ -235,57 +235,69 @@
   </section>
 
   <!-- CONTACT -->
-  <section id="contact" class="mt-20 mb-16">
-    <h2 class="text-2xl font-bold">Contact</h2>
+<section id="contact" class="mt-20 mb-16 text-center">
+  <h2 class="text-2xl font-bold">Contact 📩</h2>
 
-    <div class="mt-6 grid md:grid-cols-2 gap-6">
+  <div class="mt-10 max-w-5xl mx-auto px-6">
+    <div class="grid gap-8 xl:grid-cols-2">
 
-      <!-- Correct Formspree form -->
-      <form action="https://formspree.io/f/movgpenk"
-            method="POST"
-            class="bg-white p-6 rounded-xl shadow-sm space-y-3">
-
+      <!-- Form -->
+      <form
+        action="https://formspree.io/f/movgpenk"
+        method="POST"
+        class="bg-white p-6 rounded-xl shadow-sm space-y-4 text-left"
+      >
         <div>
           <label class="text-sm font-medium">Name</label>
-          <input class="mt-1 w-full border-gray-200 rounded-md p-2" type="text" name="name" required>
+          <input class="mt-1 w-full border-2 border-black rounded-md p-2" type="text" name="name" required>
         </div>
 
         <div>
           <label class="text-sm font-medium">Email</label>
-          <input class="mt-1 w-full border-gray-200 rounded-md p-2" type="email" name="email" required>
+          <input class="mt-1 w-full border-2 border-black rounded-md p-2" type="email" name="email" required>
         </div>
 
         <div>
           <label class="text-sm font-medium">Message</label>
-          <textarea class="mt-1 w-full border-gray-200 rounded-md p-2" name="message" rows="4" required></textarea>
+          <textarea class="mt-1 w-full border-2 border-black rounded-md p-2" name="message" rows="4" required></textarea>
         </div>
 
-        <button class="mt-3 px-4 py-2 rounded bg-accent text-white">Send</button>
+        <button class="mt-3 px-4 py-2 rounded bg-accent text-white w-full">
+          Send
+        </button>
       </form>
 
-      <div class="bg-white p-6 rounded-xl shadow-sm">
+      <!-- Contact Info -->
+      <div class="bg-white p-6 rounded-xl shadow-sm text-left">
         <h3 class="font-semibold">Reach me</h3>
 
         <p class="text-sm mt-3">
-          Email: <a href="mailto:kabakasophie@gmail.com" class="text-accent">kabakasophie@gmail.com</a>
+          Email:
+          <a href="mailto:kabakasophie@gmail.com" class="text-accent">
+            kabakasophie@gmail.com
+          </a>
         </p>
-        <p class="text-sm mt-1">
+
+        <p class="text-sm mt-2">
           LinkedIn:
-          <a href="https://www.linkedin.com/in/sophia-kabaka"
-             target="_blank"
-             class="text-accent">
+          <a
+            href="https://www.linkedin.com/in/sophia-kabaka"
+            target="_blank"
+            class="text-accent"
+          >
             sophia-kabaka
           </a>
         </p>
 
-        <p class="text-sm mt-3">
+        <p class="text-sm mt-4">
           Download resume:
           <a href="CV_SOPHIA KABAKA.pdf" class="text-accent">PDF</a>
         </p>
       </div>
 
     </div>
-  </section>
+  </div>
+</section>
 
 </main>
 
