--- a/index.html
+++ b/index.html
@@ -249,17 +249,17 @@
       >
         <div>
           <label class="text-sm font-medium">Name</label>
-          <input class="mt-1 w-full border-2 border-black rounded-md p-2" type="text" name="name" required>
+          <input class="mt-1 w-full border-2 border-gray-300 rounded-md p-2" type="text" name="name" required>
         </div>
 
         <div>
           <label class="text-sm font-medium">Email</label>
-          <input class="mt-1 w-full border-2 border-black rounded-md p-2" type="email" name="email" required>
+          <input class="mt-1 w-full border-2 border-gray-300 rounded-md p-2" type="email" name="email" required>
         </div>
 
         <div>
           <label class="text-sm font-medium">Message</label>
-          <textarea class="mt-1 w-full border-2 border-black rounded-md p-2" name="message" rows="4" required></textarea>
+          <textarea class="mt-1 w-full border-2 border-gray-300  rounded-md p-2" name="message" rows="4" required></textarea>
         </div>
 
         <button class="mt-3 px-4 py-2 rounded bg-accent text-white w-full">
