--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     </a>
 
     <nav class="space-x-4 text-sm">
-      <a href="#projects" class="bg-violet-100 hover:text-accent">Projects</a>
-      <a href="#about" class="bg-violet-100 hover:text-accent">About</a>
-      <a href="#contact" class="bg-violet-100 hover:text-accent">Contact</a>
+      <a href="#projects" class="px-3 py-1 rounded-md border border-gray-300 bg-violet-100 hover:text-accent">Projects</a>
+      <a href="#about" class="px-3 py-1 rounded-md border border-gray-300 bg-violet-100 hover:text-accent">About</a>
+      <a href="#contact" class="px-3 py-1 rounded-md border border-gray-300 bg-violet-100 hover:text-accent">Contact</a>
     </nav>
   </div>
 </header>
