--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     </a>
 
     <nav class="space-x-4 text-sm">
-      <a href="#projects" class="rounded-md border border-gray-300 bg-violet-100 hover:text-accent">Projects</a>
-      <a href="#about" class="rounded-md border border-gray-300 bg-violet-100 hover:text-accent">About</a>
-      <a href="#contact" class="rounded-md border border-gray-300 bg-violet-100 hover:text-accent">Contact</a>
+      <a href="#projects" class="border border-gray-300 bg-violet-100 hover:text-accent">Projects</a>
+      <a href="#about" class="border border-gray-300 bg-violet-100 hover:text-accent">About</a>
+      <a href="#contact" class="border border-gray-300 bg-violet-100 hover:text-accent">Contact</a>
     </nav>
   </div>
 </header>
